# delta-neutral-options-pricing

./: .gitignore  CMakeLists.txt  HLD.md  Implementation_Plan.md  LAYER6.md  LLD.md  README.md  grid_search_results.json  lld.md  main.py  setup.py  volatility_arbitrage_analysis_report.txt  volatility_arbitrage_summary.txt
data/: AAPL_2020-02-01_2020-05-31_comprehensive.csv  IWM_2023-01-01_2024-01-01_comprehensive.csv  IWM_2023-01-01_2025-01-01_comprehensive.csv  IWM_2023-08-04_2025-08-03_comprehensive.csv  SPY_2023-08-04_2025-08-03_comprehensive.csv
include/core/: DateTime.h  MarketData.h  Math.h  TimeSeries.h  VolatilityEstimator.h
include/instruments/: Derivative.h  Equity.h  Instrument.h  InstrumentFactory.h  Option.h
include/models/: BSMPricingModel.h  GARCHModel.h  Greeks.h  ModelFactory.h  PricingModel.h  VolatilityModel.h
include/strategy/: BacktestEngine.h  BacktestParameters.h  BacktestResult.h  DeltaHedgingStrategy.h  HedgingStrategy.h  Portfolio.h  Position.h  Signal.h  SignalGenerator.h  Strategy.h  Trade.h  VolatilityArbitrageStrategy.h  VolatilitySpreadSignal.h
python/: layer7_demo.py
python/analysis/: __init__.py  analyzer.py  optimizer.py  visualizer.py
python/strategy/: backtest_engine.py  backtest_engine.py.bak  enhanced_strategy.py  market_data.py  multi_regime_backtester.py  optimization_engine.py  optimized_strategy.py  real_world_strategy.py  results_summary.py
python/strategy/backtest_results/: regime_results.csv
python/strategy/data_cache/: AAPL_2025-05-05_2025-08-03_equity.csv  SPY_2025-04-05_2025-08-03_equity.csv  TNX_2025-04-05_2025-08-03.csv  TNX_2025-05-05_2025-08-03.csv  VIX_2025-04-05_2025-08-03.csv  VIX_2025-05-05_2025-08-03.csv
src/bindings/: __init__.py  binding.cpp  instruments.py  models.py  strategy.py  time_series.py
src/core/: DateTime.cpp  MarketData.cpp  Math.cpp  MathUtils.cpp  TimeSeries.cpp  VolatilityEstimator.cpp
src/instruments/: Derivative.cpp  Equity.cpp  InstrumentFactory.cpp  Option.cpp
src/models/: BSMPricingModel.cpp  GARCHModel.cpp  Greeks.cpp  ModelFactory.cpp
src/strategy/: BacktestEngine.cpp  BacktestParameters.cpp  BacktestResult.cpp  DeltaHedgingStrategy.cpp  Portfolio.cpp  Position.cpp  Signal.cpp  Trade.cpp  VolatilityArbitrageStrategy.cpp  VolatilitySpreadSignal.cpp
tests/: CMakeLists.txt  run_strategy_tests.cpp  test_backtest_engine.cpp  test_backtest_parameters.cpp  test_bsm_pricing.cpp  test_datetime.cpp  test_delta_hedging_strategy.cpp  test_equity.cpp  test_garch_model.cpp  test_instrument_factory.cpp  test_layer6_python_integration.py  test_layer7_python_analysis.py  test_marketdata.cpp  test_math.cpp  test_model_factory.cpp  test_options.cpp  test_portfolio.cpp  test_position.cpp  test_signal.cpp  test_strategy.cpp  test_strategy_basic.cpp  test_volatility.cpp  test_volatility_arbitrage_strategy.cpp  test_volatility_spread_signal.cpp
